Compiled bootstrap file
 Changes to be committed:
	modified:   bootstrap.css
	modified:   bootstrap.styl

--- a/bootstrap.styl
+++ b/bootstrap.styl
@@ -1,3 +1,7 @@
+@import 'util/breakpoints'
+@import 'util/media-queries'
+@import 'util/palette'
+
 @import 'util/helpers/anchor'
 @import 'util/helpers/background'
 @import 'util/helpers/box'
@@ -7,5 +11,7 @@
 @import 'util/helpers/generals'
 @import 'util/helpers/list'
 @import 'util/helpers/position'
+@import 'util/helpers/show-and-hide'
 @import 'util/helpers/table'
 @import 'util/helpers/text'
+@import 'util/helpers/z-index'
