Added height and font-size classes  - FIX class mixin. Use: class(name, attr, unit, from, to, gap, important)  - Moved from generals margin and pading classes and replaced static classes with class mixin  - Moved class mixin to mixins.styl  - Font size from 8px to 48px with gap 2px, 50px - 100px with gap 10px and 0.5 to 3 (em/rem) with gap 0.25
 Changes to be committed:
	new file:   util/helpers/font.styl
	modified:   util/helpers/generals.styl
	new file:   util/helpers/height.styl
	copied:     util/helpers/generals.styl -> util/helpers/margin-and-padding.styl
	modified:   util/helpers/position.styl
	new file:   util/mixins.styl

--- a/util/helpers/generals.styl
+++ b/util/helpers/generals.styl
@@ -26,66 +26,6 @@ class(name, attr, i ,gap)
 
 .w100vw
 	width 100vw
-	
-class(l,left,5,10)
-class(t,top,5,10)
-class(h,height,5,10)
 
-class(mt,margin-top,5,10)
-class(ml,margin-left,5,10)
-class(mr,margin-right,5,10)
-class(mb,margin-bottom,5,10)
-
-class(p,padding,5,10)
-class(pt,padding-top,5,10)
-class(pr,padding-right,5,10)
-class(pb,padding-bottom,5,10)
-class(pl,padding-left,5,10)
-
-.p0
-	padding 0
-
-.p5
-	padding 5px
-	
-.pr0
-	padding-right 0
-	
-.pl0
-	padding-left 0
-
-.pt0
-	padding-top 0
-
-.pb0
-	margin-bottom 0	
-
-.m0
-	margin 0
-
-.m5
-	margin 5px
-
-.mr0
-	margin-right 0
-	
-.ml0
-	margin-left 0
-
-.mt0
-	margin-top 0
-
-.mb0
-	margin-bottom 0
-	
-.l0
-	left 0 !important
-
-.t0
-	top 0 !important
-
-.r0
-	right 0 !important
-
-.b0
-	bottom 0 !important
+.fw
+	width 100%	
