--- a/util/helpers/position.styl
+++ b/util/helpers/position.styl
@@ -45,3 +45,20 @@
 
 .vas
 	vertical-align sub
+	
+.t0
+	top 0
+
+.r0
+	right 0
+
+.b0
+	bottom 0
+
+.l0
+	left 0
+
+class(l, left, 5, 10)
+class(t, top, 5, 10)
+class(r, right, 5, 10)
+class(b, bottom, 5, 10)
