Some refacts  - Added empty line at end of file  - Replaced for sentences with class mixin
 Changes to be committed:
	modified:   util/helpers/anchor.styl
	modified:   util/helpers/background.styl
	modified:   util/helpers/cursor.styl
	modified:   util/helpers/form.styl
	modified:   util/helpers/generals.styl
	modified:   util/helpers/height.styl
	modified:   util/helpers/list.styl
	modified:   util/helpers/margin-and-padding.styl
	modified:   util/helpers/position.styl
	modified:   util/helpers/show-and-hide.styl
	modified:   util/helpers/table.styl
	modified:   util/helpers/text.styl
	modified:   util/helpers/z-index.styl

--- a/util/helpers/height.styl
+++ b/util/helpers/height.styl
@@ -1,11 +1,6 @@
-class(h, height, 5, 10)
-class(h, height, 100, 5)
-
-.h0
-	height 0px
-
-.h5
-	height 5px
+class(h, height, px, 0, 45, 5)
+class(h, height, px, 50, 90, 10)
+class(h, height, px, 100, 500, 50)
 
 .h100p
 	height 100%
@@ -18,9 +13,6 @@ class(h, height, 100, 5)
 
 .h25p
 	height 25%
-
-.h0
-	height 0
 
 .hin
 	height inherit
