--- a/util/helpers/margin-and-padding.styl
+++ b/util/helpers/margin-and-padding.styl
@@ -1,46 +1,11 @@
-class(mt,margin-top,5,10)
-class(ml,margin-left,5,10)
-class(mr,margin-right,5,10)
-class(mb,margin-bottom,5,10)
+class(m,  margin, px, 0, 50, 5)
+class(mt, margin-top, px, 0, 50, 5)
+class(ml, margin-left, px, 0, 50, 5)
+class(mr, margin-right, px, 0, 50, 5)
+class(mb, margin-bottom, px, 0, 50, 5)
 
-.m0
-	margin 0
-
-.m5
-	margin 5px
-
-.mr0
-	margin-right 0
-	
-.ml0
-	margin-left 0
-
-.mt0
-	margin-top 0
-
-.mb0
-	margin-bottom 0
-
-class(p,padding,5,10)
-class(pt,padding-top,5,10)
-class(pr,padding-right,5,10)
-class(pb,padding-bottom,5,10)
-class(pl,padding-left,5,10)
-
-.p0
-	padding 0
-
-.p5
-	padding 5px
-	
-.pr0
-	padding-right 0
-	
-.pl0
-	padding-left 0
-
-.pt0
-	padding-top 0
-
-.pb0
-	padding-bottom 0	
+class(p,  padding, px, 0, 50, 5)
+class(pt, padding-top, px, 0, 50, 5)
+class(pl, padding-left, px, 0, 50, 5)
+class(pr, padding-right, px, 0, 50, 5)
+class(pb, padding-bottom, px, 0, 50, 5)
