--- a/util/helpers/text.styl
+++ b/util/helpers/text.styl
@@ -19,9 +19,21 @@
 .tal
 	text-align left
 
-for x in 1..9
-	.fw{x*100}
-		font-weight (x*100)
-
 p.paragraph-reset
 	margin 0
+
++xs()
+	.xs-text-center
+		text-align center
+
++sm()
+	.sm-text-center
+		text-align center
+	
++md()
+	.md-text-center
+		text-align center
+
++lg()
+	.lg-text-center
+		text-align center
