--- a/bootstrap.styl
+++ b/bootstrap.styl
@@ -1,5 +1,6 @@
 @import 'util/breakpoints'
 @import 'util/media-queries'
+@import 'util/mixins'
 @import 'util/palette'
 
 @import 'util/helpers/anchor'
@@ -8,8 +9,10 @@
 @import 'util/helpers/cursor'
 @import 'util/helpers/display'
 @import 'util/helpers/form'
+@import 'util/helpers/height'
 @import 'util/helpers/generals'
 @import 'util/helpers/list'
+@import 'util/helpers/margin-and-padding'
 @import 'util/helpers/position'
 @import 'util/helpers/show-and-hide'
 @import 'util/helpers/table'
