Added background properties and rename box-sizing content-box from bsc to bscb to avoid collision with background-size content
 Changes to be committed:
	modified:   util/helpers/background.styl
	modified:   util/helpers/box.styl

--- a/util/helpers/background.styl
+++ b/util/helpers/background.styl
@@ -1,9 +1,6 @@
 .bn
 	background none
 
-.biu
-	background-image unset
-
 .bc0
 	background #000
 
@@ -27,3 +24,51 @@
 
 .bcF
 	background #FFF
+
+.biu
+	background-image unset
+
+.baf
+	background-attachment fixed
+
+.bpcb, .bnbc
+	background-position center bottom !important
+
+.bpcc
+	background-position center center !important
+
+.bpct, .bptc
+	background-position center top !important
+
+.bplb, .bpbl
+	background-position left botton !important
+
+.bplc, .bpcl
+	background-position left center !important
+
+.bplt,.bptl
+	background-position left top !important
+
+.bprb, .bpbr
+	background-position right botton !important
+
+.bprc, .bpcr
+	background-position right center !important
+
+.bprt, .bptr
+	background-position right top !important
+
+.brnr
+	background-repeat no-repeat
+
+.brr
+	background-repeat repeat
+
+.bscc
+	background-size contain !important
+
+.bscv
+	background-size cover !important
+
+.bsx
+	background-size 100% 100% !important
