Compiled with flex properties
 Changes to be committed:
	modified:   bootstrap.css
	modified:   bootstrap.styl

--- a/bootstrap.styl
+++ b/bootstrap.styl
@@ -8,6 +8,7 @@
 @import 'util/helpers/box'
 @import 'util/helpers/cursor'
 @import 'util/helpers/display'
+@import 'util/helpers/flex'
 @import 'util/helpers/font'
 @import 'util/helpers/form'
 @import 'util/helpers/generals'
