Added opacity and visibility helpers  - Opacity 0, 0.25, 0.50, 0.75 and 1
 Changes to be committed:
	modified:   bootstrap.styl
	new file:   util/helpers/opacity-and-visibility.styl

--- a/bootstrap.styl
+++ b/bootstrap.styl
@@ -15,6 +15,7 @@
 @import 'util/helpers/height'
 @import 'util/helpers/list'
 @import 'util/helpers/margin-and-padding'
+@import 'util/helpers/opacity-and-visibility'
 @import 'util/helpers/position'
 @import 'util/helpers/show-and-hide'
 @import 'util/helpers/table'
