--- a/util/helpers/opacity-and-visibility.styl
+++ b/util/helpers/opacity-and-visibility.styl
@@ -1,4 +1,17 @@
-class(o, opacity, 0, 1, 0.25)
+.o0
+	opacity 0
+
+.o25
+	opacity 0.25
+
+.o50
+	opacity 0.5
+	
+.o75
+	opacity 0.75
+	
+.o100
+	opacity 1
 
 .vh
 	visibility hidden
