Added grid system (change in variables.styl)  * flexbox (based on flexboxgrid by @kristoferjoseph)  * Floats (based on bootstrap)  * Inline-block (Based on wp grid by Ricardo Aguirre)
Moved mixin media queries to mixins and renamed
Moved breakpoint mixin to mixins
Renamed breakpoints to variables

 Changes to be committed:
	modified:   bootstrap.css
	modified:   bootstrap.styl
	new file:   util/grid.styl
	deleted:    util/media-queries.styl
	modified:   util/mixins.styl
	renamed:    util/breakpoints.styl -> util/variables.styl

--- a/bootstrap.styl
+++ b/bootstrap.styl
@@ -1,7 +1,7 @@
-@import 'util/breakpoints'
-@import 'util/media-queries'
+@import 'util/variables'
 @import 'util/mixins'
 @import 'util/palette'
+@import 'util/grid'
 
 @import 'util/helpers/anchor'
 @import 'util/helpers/background'
