--- a/util/variables.styl
+++ b/util/variables.styl
@@ -1,3 +1,5 @@
+$grid-system = 'flex'
+
 $breakpoint = {
 	
 	xs: {
@@ -20,5 +22,4 @@ $breakpoint = {
 	
 }
 
-breakpoint(size, point)
-	return $breakpoint[size][point] || 0
+
