Added some text decoration properties
 Changes to be committed:
	modified:   README.md
	modified:   util/helpers/text.styl

--- a/util/helpers/text.styl
+++ b/util/helpers/text.styl
@@ -19,6 +19,46 @@
 .tal
 	text-align left
 
+.i
+	font-style italic
+
+.o
+	font-style oblique
+
+.n
+	font-weight normal
+
+.b, b, em
+	font-weight bold
+
+.tdu, u
+	text-decoration underline
+
+.tdo
+	text-decoration overline
+
+.tds, del, s
+	text-decoration line-through
+
+.tduo, .tdou
+	text-decoration underline overline
+
+
+.tduos, .tduso .tdous, .tdosu, .tdsou, .tdsuo
+	text-decoration underline overline line-through
+
+.tdss
+	text-decoration-style solid
+	
+.tdsdo
+	text-decoration-style dotted
+
+.tdsda
+	text-decoration-style dashed
+
+.tdsw
+	text-decoration-style wavy
+	
 p.paragraph-reset
 	margin 0
 
