Fixed some issues in grid  - Added column number as variable  - Replace loop for class mixin in opacity, background and created colors  - Renamed box to box-sizing  - Added font-size to headings in text (as variables)  - Added some decoration types in text  - Col is flex-grow 1 again and col-auto has the inner width  - Added param to xs mixin to get min-width media query
 Changes to be committed:
	modified:   util/helpers/background.styl
	deleted:    util/helpers/box.styl
	new file:   util/helpers/colors.styl
	modified:   util/helpers/cursor.styl
	modified:   util/helpers/opacity-and-visibility.styl
	modified:   util/helpers/text.styl
	modified:   util/mixins.styl
	modified:   util/variables.styl

--- a/util/helpers/background.styl
+++ b/util/helpers/background.styl
@@ -1,29 +1,11 @@
+@import '../variables'
+
+for color in $colors
+	.bc{color}
+		background-color $colors[color]
+
 .bn
 	background none
-
-.bc0
-	background #000
-
-.bc3
-	background #333
-
-.bc6
-	background #666
-
-.bc9
-	background #999
-
-.bcA
-	background #AAA
-
-.bcC
-	background #CCC
-
-.bcE
-	background #EEE
-
-.bcF
-	background #FFF
 
 .biu
 	background-image unset
