--- a/util/variables.styl
+++ b/util/variables.styl
@@ -1,5 +1,8 @@
+vendor-prefixes = ms o khtml moz webkit
+
 $responsive = true
 $grid-system = 'flex'
+$grid-columns = 12
 
 $breakpoint = {
 	
@@ -21,6 +24,31 @@ $breakpoint = {
 		min: 1281
 	}
 	
+}
+
+$colors = {
+	'0': #000,
+	'3': #333
+	'6': #666,
+	'9': #999,
+	'A': #AAA,
+	'C': #CCC,
+	'E': #EEE,
+	'F': #FFF
+}
+
+$borders = {
+	's': solid,
+	'w': wavy,
+	'da': dashed,
+	'do': dotted
+}
+
+$sides = {
+	't': top,
+	'l': left,
+	'r': right,
+	'b': bottom
 }
 
 $font-family-sans-serif =  "Helvetica Neue", Helvetica, Arial, sans-serif;
